e-source-registry-server: Fix a potential NULL pointer dereference

On the code path where backend is NULL, error is always NULL, so
dereferencing error->message will result in a crash.

Coverity issue: #1250457

https://bugzilla.gnome.org/show_bug.cgi?id=739494